--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,21 @@
 export(HopToDB)
 export(compare_for_staging)
 export(stage_to_temp)
+export(tbl_chain)
 export(tbl_fkey)
+export(tbl_join)
 export(tbl_keys)
+export(tbl_link)
 export(tbl_nkey)
 export(tbl_pkey)
+importFrom(DBI,dbConnect)
+importFrom(DBI,dbDriver)
+importFrom(dplyr,collect)
+importFrom(dplyr,filter)
+importFrom(dplyr,full_join)
+importFrom(dplyr,inner_join)
+importFrom(dplyr,left_join)
+importFrom(dplyr,pull)
+importFrom(dplyr,right_join)
+importFrom(dplyr,select)
+importFrom(dplyr,tbl)
