include imports in db_management

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,12 +12,20 @@ export(tbl_nkey)
 export(tbl_pkey)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDriver)
+importFrom(DBI,dbExecute)
+importFrom(DBI,dbWriteTable)
+importFrom(dplyr,anti_join)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,collect)
+importFrom(dplyr,count)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
+importFrom(dplyr,group_by_at)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,tbl)
+importFrom(dplyr,ungroup)
