--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,15 @@ export(tbl_keys)
 export(tbl_link)
 export(tbl_nkey)
 export(tbl_pkey)
+importFrom(DBI,Id)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDriver)
 importFrom(DBI,dbExecute)
+importFrom(DBI,dbListTables)
 importFrom(DBI,dbWriteTable)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,anti_join)
+importFrom(dplyr,any_of)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,collect)
 importFrom(dplyr,count)
@@ -29,3 +33,5 @@ importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,tbl)
 importFrom(dplyr,ungroup)
+importFrom(stats,na.omit)
+importFrom(usethis,edit_r_environ)
