--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,15 @@ Type: Package
 Title: RIBBiTR R Resources package
 Version: 0.0.1.0
 Encoding: UTF-8
-License: GNU General Public License v3.0
+License: GPL-3
 Author: Cob Staines
 Maintainer: Cob Staines <cobstainesconsulting@gmail.com>
 Description: RIBBiTR R Resources (or “ribbitrrr”) is an R package to support the empowered use of the Resilience Institute Bridging Biological Training and Research (RIBBiTR) database (see https://ribbitr.com/). This package contains R functions to facilitate data connection, discovery, querying, and manipulation to meet research and team science project goals.
 Imports:
     DBI,
-    dplyr
+    dplyr,
+    stats,
+    usethis,
+    lubridate,
+    dbplyr
 RoxygenNote: 7.3.2
