--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ importFrom(DBI,dbDriver)
 importFrom(DBI,dbExecute)
 importFrom(DBI,dbListTables)
 importFrom(DBI,dbWriteTable)
+importFrom(RPostgres,Postgres)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,anti_join)
 importFrom(dplyr,any_of)
@@ -34,4 +35,3 @@ importFrom(dplyr,select)
 importFrom(dplyr,tbl)
 importFrom(dplyr,ungroup)
 importFrom(stats,na.omit)
-importFrom(usethis,edit_r_environ)
