--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,19 @@
 Package: ribbitrrr
-Type: Package
 Title: RIBBiTR R Resources package
-Version: 0.0.1.0
-Encoding: UTF-8
+Version: 0.0.0.9000
+Authors@R: 
+    person("Cob", "Staines", , "cobstainesconsulting@gmail.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0009-0003-1819-3621"))
+Description: The goal of RIBBiTR R Resources (or “ribbitrrr”) is to support the empowered use of the Resilience Institute Bridging Biological Training and Research ([RIBBiTR](https://ribbitr.com/)) database. This R package contains functions to facilitate data connection, discovery, querying, and manipulation to meet research and team science project goals.
 License: GPL (>= 3)
-License_file: LICENSE
-Author: Cob Staines
-Maintainer: Cob Staines <cobstainesconsulting@gmail.com>
-Description: RIBBiTR R Resources (or “ribbitrrr”) is an R package to support the empowered use of the Resilience Institute Bridging Biological Training and Research (RIBBiTR) database (see https://ribbitr.com/). This package contains R functions to facilitate data connection, discovery, querying, and manipulation to meet research and team science project goals.
-Imports:
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.2
+Imports: 
     DBI,
     RPostgres,
     dplyr,
     stats
-RoxygenNote: 7.3.2
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
