--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,3 +35,5 @@ importFrom(dplyr,select)
 importFrom(dplyr,tbl)
 importFrom(dplyr,ungroup)
 importFrom(stats,na.omit)
+importFrom(utils,installed.packages)
+importFrom(utils,packageVersion)
