implement check_package_version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,9 @@ importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,tbl)
 importFrom(dplyr,ungroup)
+importFrom(httr,GET)
+importFrom(httr,content)
+importFrom(httr,stop_for_status)
 importFrom(stats,na.omit)
 importFrom(utils,installed.packages)
 importFrom(utils,packageVersion)
