added explicit join functions for clarity

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,15 @@ export(hopToDB)
 export(stage_to_temp)
 export(tbl_chain)
 export(tbl_fkey)
+export(tbl_full_join)
+export(tbl_inner_join)
 export(tbl_join)
 export(tbl_keys)
+export(tbl_left_join)
 export(tbl_link)
 export(tbl_nkey)
 export(tbl_pkey)
+export(tbl_right_join)
 importFrom(DBI,Id)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDriver)
