patch loops and fkey unmatched ref col name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(hopToDB)
 export(stage_to_temp)
 export(tbl_chain)
 export(tbl_fkey)
+export(tbl_fkey_ref)
 export(tbl_full_join)
 export(tbl_inner_join)
 export(tbl_join)
