--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,10 @@ Imports:
     dplyr,
     stats,
     utils,
-    httr
+    httr,
+    xml2,
+    purrr,
+    taxize
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
