--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(check_ribbitrrr_update)
 export(compare_for_staging)
 export(compare_updates)
 export(hopToDB)
+export(scrape_amphibiaweb)
 export(stage_to_temp)
 export(tbl_chain)
 export(tbl_fkey)
@@ -40,10 +41,16 @@ importFrom(dplyr,pull)
 importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,tbl)
+importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(httr,GET)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
+importFrom(purrr,map_df)
 importFrom(stats,na.omit)
+importFrom(taxize,gna_verifier)
 importFrom(utils,installed.packages)
 importFrom(utils,packageVersion)
+importFrom(xml2,read_xml)
+importFrom(xml2,xml_find_first)
+importFrom(xml2,xml_text)
