add commentary, debug species

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(httr,GET)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
 importFrom(purrr,map_df)
+importFrom(purrr,safely)
 importFrom(stats,na.omit)
 importFrom(taxize,gna_verifier)
 importFrom(utils,installed.packages)
