--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(check_ribbitrrr_update)
 export(compare_for_staging)
 export(compare_updates)
+export(hopRegister)
 export(hopToDB)
 export(scrape_amphibiaweb)
 export(stage_to_temp)
@@ -19,10 +20,16 @@ export(tbl_nkey)
 export(tbl_pkey)
 export(tbl_right_join)
 importFrom(DBI,Id)
+importFrom(DBI,dbClearResult)
+importFrom(DBI,dbColumnInfo)
 importFrom(DBI,dbConnect)
+importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbDriver)
 importFrom(DBI,dbExecute)
+importFrom(DBI,dbGetQuery)
+importFrom(DBI,dbListObjects)
 importFrom(DBI,dbListTables)
+importFrom(DBI,dbSendQuery)
 importFrom(DBI,dbWriteTable)
 importFrom(RPostgres,Postgres)
 importFrom(dplyr,"%>%")
@@ -46,6 +53,7 @@ importFrom(dplyr,ungroup)
 importFrom(httr,GET)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
+importFrom(purrr,map_chr)
 importFrom(purrr,map_df)
 importFrom(stats,na.omit)
 importFrom(utils,installed.packages)
