support user-specific hopRegister preview of database based on user privileges

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,6 @@ importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbDriver)
 importFrom(DBI,dbExecute)
 importFrom(DBI,dbGetQuery)
-importFrom(DBI,dbListObjects)
 importFrom(DBI,dbListTables)
 importFrom(DBI,dbSendQuery)
 importFrom(DBI,dbWriteTable)
@@ -35,6 +34,7 @@ importFrom(RPostgres,Postgres)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,anti_join)
 importFrom(dplyr,any_of)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,collect)
 importFrom(dplyr,count)
@@ -53,7 +53,6 @@ importFrom(dplyr,ungroup)
 importFrom(httr,GET)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
-importFrom(purrr,map_chr)
 importFrom(purrr,map_df)
 importFrom(stats,na.omit)
 importFrom(utils,installed.packages)
