--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,14 +20,17 @@ export(tbl_nkey)
 export(tbl_pkey)
 export(tbl_right_join)
 importFrom(DBI,Id)
+importFrom(DBI,dbBegin)
 importFrom(DBI,dbClearResult)
 importFrom(DBI,dbColumnInfo)
+importFrom(DBI,dbCommit)
 importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbDriver)
 importFrom(DBI,dbExecute)
 importFrom(DBI,dbGetQuery)
 importFrom(DBI,dbListTables)
+importFrom(DBI,dbRollback)
 importFrom(DBI,dbSendQuery)
 importFrom(DBI,dbWriteTable)
 importFrom(RPostgres,Postgres)
