--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,8 @@ importFrom(httr,GET)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
 importFrom(purrr,map_df)
+importFrom(rscontract,rscontract_close)
+importFrom(rscontract,rscontract_spec)
 importFrom(stats,na.omit)
 importFrom(utils,installed.packages)
 importFrom(utils,packageVersion)
