--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ importFrom(httr,content)
 importFrom(httr,stop_for_status)
 importFrom(purrr,map_df)
 importFrom(rscontract,rscontract_close)
+importFrom(rscontract,rscontract_open)
 importFrom(rscontract,rscontract_spec)
 importFrom(stats,na.omit)
 importFrom(utils,installed.packages)
