--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(compare_for_staging)
 export(compare_updates)
 export(hopToDB)
 export(scrape_amphibiaweb)
+export(scrape_cites)
 export(stage_to_temp)
 export(tbl_chain)
 export(tbl_fkey)
@@ -49,8 +50,10 @@ importFrom(dplyr,tbl)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(httr,GET)
+importFrom(httr,add_headers)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
+importFrom(jsonlite,fromJSON)
 importFrom(purrr,map_df)
 importFrom(rscontract,rscontract_close)
 importFrom(rscontract,rscontract_open)
