--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(compare_for_staging)
 export(compare_updates)
 export(hopToDB)
 export(local_time_vec)
+export(ribbitr_clean_taxa)
 export(scrape_amphibiaweb)
 export(scrape_cites)
 export(stage_to_temp)
@@ -61,6 +62,8 @@ importFrom(lubridate,ymd_hms)
 importFrom(purrr,map_df)
 importFrom(purrr,pmap)
 importFrom(purrr,pmap_vec)
+importFrom(rlang,enquo)
+importFrom(rlang,quo_is_null)
 importFrom(rscontract,rscontract_close)
 importFrom(rscontract,rscontract_open)
 importFrom(rscontract,rscontract_spec)
