init get_query metadata

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(as_timestamptz_vec)
 export(check_ribbitrrr_update)
 export(compare_for_staging)
 export(compare_updates)
+export(get_query_metadata)
 export(hopToDB)
 export(local_time_vec)
 export(ribbitr_clean_taxa)
