init time mgmt functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,14 @@
 
 export(as_timestamptz_vec)
 export(check_ribbitrrr_update)
+export(clean_survey_times)
 export(compare_for_staging)
 export(compare_updates)
+export(count_observers)
+export(duration_minutes)
+export(end_timestamp_local)
+export(end_timestamp_utc)
+export(find_time_range)
 export(get_query_metadata)
 export(hopToDB)
 export(local_time_vec)
@@ -11,6 +17,8 @@ export(ribbitr_clean_taxa)
 export(scrape_amphibiaweb)
 export(scrape_cites)
 export(stage_to_temp)
+export(start_timestamp_local)
+export(start_timestamp_utc)
 export(tbl_chain)
 export(tbl_fkey)
 export(tbl_fkey_ref)
@@ -59,6 +67,7 @@ importFrom(httr,add_headers)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
 importFrom(jsonlite,fromJSON)
+importFrom(lubridate,force_tz)
 importFrom(lubridate,with_tz)
 importFrom(lubridate,ymd_hms)
 importFrom(purrr,map_df)
