--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(get_query_metadata)
 export(hopToDB)
 export(local_time_vec)
 export(ribbitr_clean_taxa)
+export(ribbitr_taxa_lookup)
 export(scrape_amphibiaweb)
 export(scrape_cites)
 export(stage_to_temp)
@@ -46,6 +47,7 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,anti_join)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,collect)
 importFrom(dplyr,count)
@@ -57,6 +59,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
+importFrom(dplyr,rename_with)
 importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,tbl)
@@ -71,6 +74,7 @@ importFrom(lubridate,force_tz)
 importFrom(lubridate,with_tz)
 importFrom(lubridate,ymd_hms)
 importFrom(purrr,map_df)
+importFrom(purrr,map_int)
 importFrom(purrr,pmap)
 importFrom(purrr,pmap_vec)
 importFrom(rlang,enquo)
@@ -79,6 +83,9 @@ importFrom(rscontract,rscontract_close)
 importFrom(rscontract,rscontract_open)
 importFrom(rscontract,rscontract_spec)
 importFrom(stats,na.omit)
+importFrom(taxize,itis_hierarchy)
+importFrom(taxize,itis_taxrank)
+importFrom(tidyr,pivot_wider)
 importFrom(utils,installed.packages)
 importFrom(utils,packageVersion)
 importFrom(xml2,read_xml)
