--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(find_time_range)
 export(get_query_metadata)
 export(hopToDB)
 export(local_time_vec)
+export(resolve_sample_conflicts)
 export(ribbitr_clean_taxa)
 export(ribbitr_taxa_lookup)
 export(scrape_amphibiaweb)
@@ -51,8 +52,10 @@ importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,collect)
 importFrom(dplyr,count)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
+importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_at)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
@@ -69,6 +72,7 @@ importFrom(httr,GET)
 importFrom(httr,add_headers)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
+importFrom(janitor,get_dupes)
 importFrom(jsonlite,fromJSON)
 importFrom(lubridate,force_tz)
 importFrom(lubridate,with_tz)
