support for yaml file for connection credentials

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,3 +96,4 @@ importFrom(utils,packageVersion)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_text)
+importFrom(yaml,yaml.load)
