--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,4 +85,4 @@ importFrom(utils,packageVersion)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_text)
-importFrom(yaml,yaml.load)
+importFrom(yaml,yaml.load_file)
