--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(find_time_range)
 export(get_query_metadata)
 export(hopToDB)
 export(local_time_vec)
+export(microclimate_presurvey)
 export(resolve_sample_conflicts)
 export(ribbitr_clean_taxa)
 export(ribbitr_taxa_lookup)
@@ -50,6 +51,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_at)
 importFrom(dplyr,inner_join)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
@@ -69,6 +71,7 @@ importFrom(lubridate,ymd_hms)
 importFrom(purrr,map_df)
 importFrom(purrr,map_int)
 importFrom(purrr,pmap)
+importFrom(purrr,pmap_df)
 importFrom(purrr,pmap_vec)
 importFrom(rlang,enquo)
 importFrom(rlang,quo_is_null)
