add Id to import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(tbl_fkey_ref)
 export(tbl_keys)
 export(tbl_nkey)
 export(tbl_pkey)
+importFrom(DBI,Id)
 importFrom(DBI,dbBegin)
 importFrom(DBI,dbCommit)
 importFrom(DBI,dbConnect)
