--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(tbl_fkey_ref)
 export(tbl_keys)
 export(tbl_nkey)
 export(tbl_pkey)
+export(timestamp_of_capture_utc)
 importFrom(DBI,Id)
 importFrom(DBI,dbBegin)
 importFrom(DBI,dbCommit)
@@ -66,7 +67,9 @@ importFrom(httr,add_headers)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
 importFrom(jsonlite,fromJSON)
+importFrom(lubridate,as_datetime)
 importFrom(lubridate,force_tz)
+importFrom(lubridate,hours)
 importFrom(lubridate,with_tz)
 importFrom(lubridate,ymd_hms)
 importFrom(purrr,map_df)
