--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,10 @@ export(clean_survey_times)
 export(compare_for_staging)
 export(compare_updates)
 export(count_observers)
+export(db_rows_delete)
+export(db_rows_insert)
+export(db_rows_update)
+export(db_rows_upsert)
 export(duration_minutes)
 export(end_timestamp_local)
 export(end_timestamp_utc)
@@ -58,6 +62,10 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
+importFrom(dplyr,rows_delete)
+importFrom(dplyr,rows_insert)
+importFrom(dplyr,rows_update)
+importFrom(dplyr,rows_upsert)
 importFrom(dplyr,select)
 importFrom(dplyr,tbl)
 importFrom(dplyr,tibble)
