hopToDB() default to RStudio Environment Pane after establishing connection

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ importFrom(rlang,quo_is_null)
 importFrom(rscontract,rscontract_close)
 importFrom(rscontract,rscontract_open)
 importFrom(rscontract,rscontract_spec)
+importFrom(rstudioapi,executeCommand)
 importFrom(stats,na.omit)
 importFrom(tidyr,pivot_wider)
 importFrom(utils,installed.packages)
