--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ribbitrrr
 Title: RIBBiTR R Resources package
-Version: 0.0.2.3
+Version: 0.0.2.4
 Authors@R: 
     person("Cob", "Staines", , "cobstainesconsulting@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0003-1819-3621"))
@@ -21,6 +21,7 @@ Imports:
     purrr,
     lubridate,
     rscontract,
+    rstudioapi,
     yaml
 Suggests: 
     testthat (>= 3.0.0),
